Kubernetes/services/files/clarity/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apiclarity
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: "clarity.docker"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apiclarity-apiclarity
            port:
              number: 8080  # Using the HTTP backend port
